fixed spacing and button sizing

--- a/src/app/components/about-g2-g/about-g2-g.component.css
+++ b/src/app/components/about-g2-g/about-g2-g.component.css
@@ -3,9 +3,22 @@ p {
   margin-left: auto;
   margin-right: auto;
 }
-
+.g2g-btn-computer {
+  margin-top: 25px;
+  display: inline-flex;
+}
+.g2g-btn-mobile {
+  display: none;
+}
 @media screen and (max-width: 770px) {
   p {
     width: 85%;
+  }
+  .g2g-btn-computer {
+    display: none;
+  }
+  .g2g-btn-mobile {
+    margin-top: 25px;
+    display: inline-flex;
   }
 }
